Add Arranger project as path parameter to all requests
